--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "firebase": "^9.6.10",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
